--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -33,14 +33,128 @@
                     <view key="view" contentMode="scaleToFill" id="njh-CV-BSj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssB-44-b2E">
+                                <rect key="frame" x="16" y="55" width="343" height="26.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEN-Jv-aZU">
+                                <rect key="frame" x="16" y="94.5" width="343" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iuC-fq-Zj1">
+                                <rect key="frame" x="0.0" y="148" width="375" height="268"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="268" id="BfD-16-tyO"/>
+                                    <constraint firstAttribute="width" constant="375" id="lFe-lr-eff"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lax-vh-nxL">
+                                <rect key="frame" x="149" y="558" width="77" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5pN-Q7-RNe"/>
+                                    <constraint firstAttribute="width" constant="77" id="Ih3-Jj-Vs7"/>
+                                </constraints>
+                                <state key="normal" title="選曲画面へ"/>
+                                <connections>
+                                    <action selector="pick:" destination="yj2-BC-8Qc" eventType="touchUpInside" id="Zhq-ZU-gxA"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBM-lB-rGk">
+                                <rect key="frame" x="291" y="495" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="H9K-QO-lX3"/>
+                                    <constraint firstAttribute="width" constant="31" id="Jz1-w4-ZaQ"/>
+                                </constraints>
+                                <state key="normal" title="次へ"/>
+                                <connections>
+                                    <action selector="next:" destination="yj2-BC-8Qc" eventType="touchUpInside" id="goG-sx-ybp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5HH-ol-KBU">
+                                <rect key="frame" x="64" y="495" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="TEe-QY-nWP"/>
+                                    <constraint firstAttribute="height" constant="30" id="cUj-47-lIW"/>
+                                </constraints>
+                                <state key="normal" title="前へ"/>
+                                <connections>
+                                    <action selector="back:" destination="yj2-BC-8Qc" eventType="touchUpInside" id="AZO-Ge-KLY"/>
+                                </connections>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="IGg-zM-k46">
+                                <rect key="frame" x="14" y="430" width="347" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="UDF-nS-lW8"/>
+                                    <constraint firstAttribute="height" constant="30" id="kY1-hn-Se1"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="scrubAction:" destination="yj2-BC-8Qc" eventType="valueChanged" id="j0Y-Yg-yXv"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Rl-SR-5A0">
+                                <rect key="frame" x="149" y="478" width="88" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="XQf-wY-yVU"/>
+                                    <constraint firstAttribute="width" constant="88" id="i7I-Xo-ncp"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="play.png"/>
+                                <connections>
+                                    <action selector="play:" destination="yj2-BC-8Qc" eventType="touchUpInside" id="W1I-57-7Z5"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="iuC-fq-Zj1" firstAttribute="top" secondItem="YEN-Jv-aZU" secondAttribute="bottom" constant="33" id="25x-Ql-pDV"/>
+                            <constraint firstItem="5HH-ol-KBU" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="35" id="69s-XH-1Wx"/>
+                            <constraint firstItem="YEN-Jv-aZU" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="16" id="9QS-Pv-FRF"/>
+                            <constraint firstItem="bBM-lB-rGk" firstAttribute="leading" secondItem="7Rl-SR-5A0" secondAttribute="trailing" constant="54" id="D33-U5-sUc"/>
+                            <constraint firstItem="ssB-44-b2E" firstAttribute="top" secondItem="7SJ-35-f1R" secondAttribute="top" constant="35" id="F82-S4-PNz"/>
+                            <constraint firstItem="bBM-lB-rGk" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="35" id="GRa-6z-Lsb"/>
+                            <constraint firstItem="iuC-fq-Zj1" firstAttribute="top" secondItem="YEN-Jv-aZU" secondAttribute="bottom" constant="33" id="Gas-2Q-WU5"/>
+                            <constraint firstItem="iuC-fq-Zj1" firstAttribute="trailing" secondItem="7SJ-35-f1R" secondAttribute="trailing" id="IL3-rv-xeP"/>
+                            <constraint firstItem="lax-vh-nxL" firstAttribute="top" secondItem="7Rl-SR-5A0" secondAttribute="bottom" constant="16" id="Iz6-qE-GW9"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="leading" secondItem="5HH-ol-KBU" secondAttribute="trailing" constant="54" id="Lnn-f3-haG"/>
+                            <constraint firstItem="IGg-zM-k46" firstAttribute="top" secondItem="iuC-fq-Zj1" secondAttribute="bottom" constant="14" id="NdB-eg-guM"/>
+                            <constraint firstItem="5HH-ol-KBU" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="64" id="OOc-uB-wm3"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="bBM-lB-rGk" secondAttribute="trailing" constant="53" id="OYq-xp-PaU"/>
+                            <constraint firstItem="iuC-fq-Zj1" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" id="RUi-jM-w2N"/>
+                            <constraint firstItem="ssB-44-b2E" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="16" id="Sxx-ap-aDx"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="lax-vh-nxL" secondAttribute="trailing" constant="149" id="UcZ-gd-lus"/>
+                            <constraint firstItem="IGg-zM-k46" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="16" id="WxI-Ff-3E1"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="ssB-44-b2E" secondAttribute="trailing" constant="16" id="c0x-Hm-ho3"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="IGg-zM-k46" secondAttribute="trailing" constant="16" id="dIk-iH-iEJ"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="18" id="eEl-OC-UXf"/>
+                            <constraint firstItem="lax-vh-nxL" firstAttribute="top" secondItem="7Rl-SR-5A0" secondAttribute="bottom" constant="16" id="eTj-cD-neC"/>
+                            <constraint firstItem="lax-vh-nxL" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="149" id="exE-1O-Cf6"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="YEN-Jv-aZU" secondAttribute="trailing" constant="16" id="hqS-1L-qlW"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="bottom" secondItem="bBM-lB-rGk" secondAttribute="bottom" constant="93" id="kNE-wR-KEi"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="18" id="l7Q-zB-AEV"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="bottom" secondItem="lax-vh-nxL" secondAttribute="bottom" constant="30" id="ouD-JH-iqW"/>
+                            <constraint firstItem="YEN-Jv-aZU" firstAttribute="top" secondItem="ssB-44-b2E" secondAttribute="bottom" constant="13" id="s7m-Sw-X9F"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="bottom" secondItem="5HH-ol-KBU" secondAttribute="bottom" constant="93" id="sM9-Bx-TT0"/>
+                            <constraint firstItem="IGg-zM-k46" firstAttribute="top" secondItem="iuC-fq-Zj1" secondAttribute="bottom" constant="14" id="wMJ-Fo-LMm"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="leading" secondItem="5HH-ol-KBU" secondAttribute="trailing" constant="54" id="xmv-0k-mGb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="7SJ-35-f1R"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="ワークアウトミュージック" image="music.png" id="rQJ-yX-HAv"/>
+                    <connections>
+                        <outlet property="artistname" destination="YEN-Jv-aZU" id="fE6-SX-7JH"/>
+                        <outlet property="imageView" destination="iuC-fq-Zj1" id="pbM-7O-5Rg"/>
+                        <outlet property="playButton" destination="7Rl-SR-5A0" id="QqJ-kX-JdN"/>
+                        <outlet property="scrubBar" destination="IGg-zM-k46" id="DPE-ia-Ijj"/>
+                        <outlet property="songname" destination="ssB-44-b2E" id="tyk-GN-DZd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A1C-wn-Hjp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1566" y="1075"/>
+            <point key="canvasLocation" x="1565.5999999999999" y="1074.5127436281859"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="hD0-BU-B47">
@@ -304,6 +418,7 @@
     <resources>
         <image name="calendar.png" width="32" height="32"/>
         <image name="music.png" width="32" height="32"/>
+        <image name="play.png" width="64" height="64"/>
         <image name="setmenu.png" width="32" height="32"/>
     </resources>
 </document>
