--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -198,11 +198,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4MM-MY-tr9">
-                                                    <rect key="frame" x="15" y="5" width="36" height="36"/>
+                                                    <rect key="frame" x="15" y="11" width="36" height="36"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AVW-H5-IKd">
-                                                    <rect key="frame" x="67" y="11" width="42" height="21"/>
+                                                    <rect key="frame" x="67" y="20" width="42" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -389,6 +389,10 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jTJ-Dx-ufE">
+                                        <rect key="frame" x="0.0" y="292" width="375" height="179"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    </pickerView>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
@@ -479,7 +483,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="スケジュール内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o8r-xX-9vX">
-                                <rect key="frame" x="25" y="518" width="334" height="20.5"/>
+                                <rect key="frame" x="25" y="471" width="334" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="334" id="CBW-Pu-xlF"/>
                                     <constraint firstAttribute="height" constant="20.5" id="wvD-Za-uF9"/>
@@ -495,16 +499,6 @@
                                     <constraint firstAttribute="height" constant="55" id="zKI-7n-NdT"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="主なスケジュール" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXl-OO-ZHd">
-                                <rect key="frame" x="25" y="467" width="150" height="29"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="29" id="iLa-tM-Rcj"/>
-                                    <constraint firstAttribute="width" constant="150" id="oKN-2l-Vuo"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -525,16 +519,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="tzd-fU-QJm" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="16" id="4GX-Fe-prf"/>
-                            <constraint firstItem="JXl-OO-ZHd" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="7oT-NE-gJt"/>
                             <constraint firstItem="o8r-xX-9vX" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="KJj-53-w84"/>
-                            <constraint firstItem="X93-aB-kt4" firstAttribute="bottom" secondItem="o8r-xX-9vX" secondAttribute="bottom" constant="79.5" id="LjZ-gH-wXB"/>
-                            <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="JXl-OO-ZHd" secondAttribute="trailing" constant="200" id="LmZ-CL-3lW"/>
+                            <constraint firstItem="X93-aB-kt4" firstAttribute="bottom" secondItem="o8r-xX-9vX" secondAttribute="bottom" constant="126.5" id="LjZ-gH-wXB"/>
                             <constraint firstItem="iJT-0d-4PI" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="LqH-LL-slZ"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="o8r-xX-9vX" secondAttribute="trailing" constant="16" id="TTg-l9-scB"/>
-                            <constraint firstItem="o8r-xX-9vX" firstAttribute="top" secondItem="JXl-OO-ZHd" secondAttribute="bottom" constant="22" id="UUf-1l-voP"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="bottom" secondItem="NZO-Ah-ZfC" secondAttribute="bottom" constant="20" id="YIM-8T-w6k"/>
+                            <constraint firstItem="o8r-xX-9vX" firstAttribute="top" secondItem="tzd-fU-QJm" secondAttribute="bottom" constant="22" id="dP8-Ti-gT8"/>
                             <constraint firstItem="iJT-0d-4PI" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="eU7-ma-5DV"/>
-                            <constraint firstItem="JXl-OO-ZHd" firstAttribute="top" secondItem="tzd-fU-QJm" secondAttribute="bottom" constant="18" id="goy-BV-zWp"/>
                             <constraint firstItem="tzd-fU-QJm" firstAttribute="top" secondItem="iJT-0d-4PI" secondAttribute="bottom" constant="32" id="gzQ-ck-mNi"/>
                             <constraint firstItem="iJT-0d-4PI" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="iFQ-QH-3dc"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="NZO-Ah-ZfC" secondAttribute="trailing" constant="16" id="jK0-Od-d0R"/>
@@ -549,7 +540,6 @@
                         <outlet property="addBtn" destination="NZO-Ah-ZfC" id="scv-9x-wvR"/>
                         <outlet property="dateView" destination="iJT-0d-4PI" id="vcx-mA-Yy2"/>
                         <outlet property="labelDate" destination="o8r-xX-9vX" id="CAM-Vg-b8F"/>
-                        <outlet property="labelTitle" destination="JXl-OO-ZHd" id="f1U-c7-4F8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DeT-ao-66D" userLabel="First Responder" sceneMemberID="firstResponder"/>
